fix/monitor_not_live
